# favnir

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INVARIANTS.md  LICENSE  MIGRATION.md  MILESTONE.md  README.md  SECURITY.md  SECURITY_MODEL.md  STABILITY.md
crates/favnir-wasm/: Cargo.toml
crates/favnir-wasm/src/: lib.rs
fav/: ARCHITECTURE.md  Cargo.toml  Dockerfile.builder  README.md  test_deep.fav  test_deep30.fav  test_levels.fav  test_recurse.fav
fav/.cargo/: config.toml
fav/.fav_checkpoints/: cp_test_meta_time.meta.txt  cp_test_meta_value.meta.txt  cp_test_save.meta.txt  cp_test_save.txt  cp_test_wrapper_last.meta.txt  cp_test_wrapper_save.meta.txt
fav/editors/favnir-vscode/: language-configuration.json  package.json
fav/examples/: abstract_flw_basic.fav  abstract_flw_inject.fav  adt_match.fav  algebraic.fav  async_demo.fav  bundle_demo.fav  cap_sort.fav  cap_user.fav  cap_user.fvc  chain.fav  collect.fav  csv_to_json.fav  custom_effects.fav  dynamic_inject.fav  effect_errors.fav  for_demo.fav  hello.fav  interface_auto.fav  interface_basic.fav  invariant_basic.fav  math.bench.fav  math_wasm.fav  pipe_match.fav  pipeline.fav  std_states.fav  task_parallel_demo.fav  users.fav
fav/examples/async/: async_demo.fav  async_main_demo.fav  task_parallel_demo.fav
fav/examples/auth_demo/: fav.toml
fav/examples/basic/: collect.fav  generics.fav  hello.fav  users.fav
fav/examples/csv_demo/: fav.toml  users.csv
fav/examples/data/: csv_to_json.fvc  output.json
fav/examples/db_demo/: fav.toml
fav/examples/diff_demo/: new.fav  old.fav
fav/examples/duckdb_demo/: fav.toml
fav/examples/env_demo/: .env  fav.toml
fav/examples/features/: coalesce_demo.fav  for_demo.fav  fstring_demo.fav  record_match.fav
fav/examples/gen2_demo/: fav.toml
fav/examples/gen_demo/: main.fav
fav/examples/graphql_schema_demo/: fav.toml  schema.generated.graphql
fav/examples/grpc_client_demo/: fav.toml
fav/examples/grpc_server_demo/: fav.toml
fav/examples/grpc_stream_demo/: fav.toml
fav/examples/http_demo/: fav.toml
fav/examples/incremental_demo/: fav.toml
fav/examples/infer_demo/: data.csv
fav/examples/json_demo/: config.json  fav.toml
fav/examples/log_demo/: fav.toml
fav/examples/multi_file/: fav.toml
fav/examples/parquet_demo/: fav.toml
fav/examples/pipeline/: abstract_seq_basic.fav  abstract_seq_inject.fav  bundle_demo.fav  chain.fav  csv_to_json.fav  custom_effects.fav  pipe_match.fav  pipeline.fav  stage_seq_demo.fav
fav/examples/proto_roundtrip_demo/: fav.toml  schema.inferred.fav  schema.proto
fav/examples/schema_demo/: main.fav
fav/examples/selfhost/: lexer.fav
fav/examples/stat_demo/: fav.toml
fav/examples/stream_demo/: fav.toml
fav/examples/testing/: math.test.fav  test_any.fav  test_run.fav  test_sample.fav
fav/examples/types/: adt_match.fav  algebraic.fav  interface_auto.fav  interface_basic.fav  invariant_basic.fav  std_states.fav  type_alias_demo.fav
fav/examples/validate_demo/: fav.toml
fav/examples/visibility_errors/: fav.toml
fav/examples/wasm/: closures_wasm.fav  hello_wasm.fav  math_wasm.fav  string_wasm.fav
fav/runes/ctx/: appctx.fav  crosscloud.fav  ctx.fav  mock_db.fav  mock_storage.fav
fav/self/: checker.fav  cli.fav  codegen.fav  compiler.fav  lexer.fav  parser.fav  vm.fav
fav/self/stdlib/: list_stdlib.fav  string_stdlib.fav
fav/selfhost/: README.md
fav/selfhost/lexer/: lexer.fav  lexer.test.fav
fav/selfhost/parser/: ast.fav  main.fav  parser.fav  parser.test.fav
fav/src/: artifact.rs  ast.rs  checker.rs  checker_fav_runner.rs  codegen.rs  compiler.rs  compiler_fav_runner.rs  docs_server.rs  driver.rs  emit_python.rs  error_catalog.rs  eval.rs  explain_verbose.rs  fav_audit.rs  fmt.rs  generate_csv.rs  generate_sql.rs  ir.rs  lexer.rs  lib.rs  lineage.rs  lint.rs  lock.rs  main.rs  otel.rs  parser.rs  policy.rs  resolver.rs  rune_cmd.rs  schemas.rs  std_states.rs  stdlib_fav_runner.rs  suggest.rs  toml.rs  value.rs  vm.rs
fav/src/arena/: mod.rs
fav/src/backend/: artifact.rs  codegen.rs  cranelift_aot.rs  heap_val.rs  mod.rs  nan_val.rs  pg_pool.rs  vm.rs  vm_legacy_coverage_tests.rs  vm_stdlib_tests.rs  wasm_codegen.rs  wasm_dce.rs  wasm_exec.rs  wasm_opt_pass.rs
fav/src/coverage/: mod.rs
fav/tests/: integration.rs
fav/tmp/: arrow_roundtrip.parquet  gen_order_test.csv  gen_order_test.parquet  hello.fav  match_debug.fav  match_test.fav  pipeline_test.fav  test1.fav  test2.fav  test3.fav  test4.fav  test5.fav  test6.fav  test7.fav  test8.fav  test9.fav  test_append.parquet  test_duckdb_out.csv  test_duckdb_sales.parquet  test_empty.parquet  test_minimal.fav  test_minimal2.fav  test_row_count.parquet  test_schema.fav  test_schema2.fav
(+3058 files in other folders)
