[package]
name = "fav"
version = "13.2.0"
edition = "2024"

[[bin]]
name = "fav"
path = "src/main.rs"

[[bin]]
name = "rvm"
path = "src/bin/rvm.rs"

[lib]
name = "fav_core"
path = "src/lib.rs"
crate-type = ["rlib"]

# ── Dependencies available on all targets ──────────────────────────────────────
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
chrono = { version = "=0.4.38", default-features = false, features = ["clock"] }
wasm-encoder = "0.219"

# ── Native-only dependencies (not available on wasm32) ────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = { version = "30", default-features = false, features = ["cranelift", "runtime"] }
rusqlite = { version = "0.31", features = ["bundled"] }
ureq = "2"
uuid = { version = "1", features = ["v4", "v7"] }
base64 = "0.22"
rand = { version = "0.8", features = ["small_rng"] }
csv = "1"
walkdir = "2"
viuer = "0.7"
supports-color = "3"
open = "5"
postgres = { version = "0.19", optional = true }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.12"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
tiny_http = "0.12"
tonic = { version = "0.11", features = ["transport"] }
tokio = { version = "1", features = ["full"] }
prost = "0.12"
h2 = "0.3"
bytes = "1"
http = "0.2"
parquet = "52"
arrow = { version = "52", features = ["ipc"] }
duckdb = { version = "1", features = ["bundled", "parquet"] }
notify = "6"
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[features]
postgres_integration = ["dep:postgres"]

[dev-dependencies]
tempfile = "3"
