[package]
name = "favnir-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
fav_core = { path = "../../fav", package = "fav" }
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
